--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flick",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://aarav-j.github.io/flicks", 
+  "homepage": "https://aarav-j.github.io/flicks", 
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
     "@chakra-ui/react": "^2.2.1",
